feat: new model

--- a/model_gen.ipynb
+++ b/model_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -50,15 +50,15 @@
     "# 生成训练集、测试集\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(feature, label, test_size=0.2, train_size=0.8, random_state=0)\n",
-    "x_train, x_test, y_train, y_test = x_train.to(device), x_test.to(device), y_train.to(device), y_test.to(device)\n",
-    "# x_train = feature.to(device)\n",
-    "# y_train = label.to(device)"
+    "# x_train, x_test, y_train, y_test = train_test_split(feature, label, test_size=0.15, train_size=0.85, random_state=0)\n",
+    "# x_train, x_test, y_train, y_test = x_train.to(device), x_test.to(device), y_train.to(device), y_test.to(device)\n",
+    "x_train = feature.to(device)\n",
+    "y_train = label.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -70,13 +70,13 @@
     "train_dataset = TensorDataset(x_train, y_train)\n",
     "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
-    "test_dataset = TensorDataset(x_test, y_test)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=True)"
+    "# test_dataset = TensorDataset(x_test, y_test)\n",
+    "# test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -111,28 +111,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 0 loss: 0.1022655870\n",
-      "epoch 10 loss: 0.0091516626\n",
-      "epoch 20 loss: 0.0051610491\n",
-      "epoch 30 loss: 0.0032670550\n",
-      "epoch 40 loss: 0.0023635755\n",
-      "epoch 50 loss: 0.0024437057\n",
-      "epoch 60 loss: 0.0019017887\n",
-      "epoch 70 loss: 0.0014202280\n",
-      "epoch 80 loss: 0.0013623403\n",
-      "epoch 90 loss: 0.0013394938\n",
-      "epoch 100 loss: 0.0011808470\n",
-      "epoch 110 loss: 0.0012995278\n",
-      "epoch 120 loss: 0.0012470213\n",
-      "epoch 130 loss: 0.0008711648\n",
-      "epoch 140 loss: 0.0008137441\n",
+      "epoch 0 loss: 0.1156727313\n",
+      "epoch 10 loss: 0.0107814490\n",
+      "epoch 20 loss: 0.0061456303\n",
+      "epoch 30 loss: 0.0039568360\n",
+      "epoch 40 loss: 0.0034324323\n",
+      "epoch 50 loss: 0.0028770236\n",
+      "epoch 60 loss: 0.0022990988\n",
+      "epoch 70 loss: 0.0016972108\n",
+      "epoch 80 loss: 0.0016545222\n",
+      "epoch 90 loss: 0.0018570556\n",
+      "epoch 100 loss: 0.0014894591\n",
+      "epoch 110 loss: 0.0016068309\n",
+      "epoch 120 loss: 0.0011419157\n",
+      "epoch 130 loss: 0.0007955134\n",
+      "epoch 140 loss: 0.0012772046\n",
+      "epoch 150 loss: 0.0008910878\n",
+      "epoch 160 loss: 0.0008567379\n",
+      "epoch 170 loss: 0.0007111794\n",
+      "epoch 180 loss: 0.0006965153\n",
+      "epoch 190 loss: 0.0007300272\n",
       "Finished Training\n"
      ]
     }
    ],
    "source": [
     "# 训练网络\n",
-    "for epoch in range(500):  # 数字越大，循环次数越多\n",
+    "for epoch in range(200):  # 数字越大，循环次数越多\n",
     "    running_loss = 0.0\n",
     "    for i, data in enumerate(train_loader, 0):\n",
     "        # get the inputs; data is a list of [inputs, labels]\n",
@@ -163,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9744166666666667\n"
+      "Accuracy: 0.9781111111111112\n"
      ]
     }
    ],
@@ -215,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov  4 2022, 16:35:55) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
